--- a/src/assets/styles/components/banner.scss
+++ b/src/assets/styles/components/banner.scss
@@ -1,22 +1,54 @@
-.jumbotron {
+.underlay {
     position: absolute;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
-    padding-top: 130px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(../pics/bggirl.jpg);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(../pics/bggirl.jpg) no-repeat;
+    background-size: cover;
+    @media (max-width: 768px) {
+        display: none;
+    }
+}
+.jumbotron {
 }
 
 .sales-banner-wr {
-    padding-left: 300px;
+    margin-top: 6vw;
+    margin-left: 12vw;
+
+    @media (max-width: 920px) {
+        margin-top: 12vw;
+    }
+
+    @media (max-width: 768px) {
+        height: 100vw;
+        max-width: 100%;
+        margin: 0;
+        background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+            url(../pics/mainbg-mobile.png) no-repeat;
+        background-size: cover;
+    }
 }
 .sales-banner {
     display: flex;
+    max-width: 365px;
+    width: 100%;
     flex-direction: column;
     justify-content: space-between;
-    width: 360px;
-    height: 320px;
+
+    @media (max-width: 768px) {
+        margin-left: 10vw;
+        padding-top: 45vw;
+    }
+
+    @media (max-width: 560px) {
+        max-width: 260px;
+        padding-top: 50vw;
+    }
 }
 
 .sales-banner__text {
@@ -25,6 +57,21 @@
     font-size: 66px;
     font-weight: 700;
     line-height: 77px;
+
+    @media (max-width: 920px) {
+        font-size: 60px;
+        line-height: 58px;
+    }
+
+    @media (max-width: 768px) {
+        font-size: 43px;
+        line-height: 42px;
+    }
+
+    @media (max-width: 560px) {
+        font-size: 36px;
+        line-height: 34px;
+    }
 }
 
 .shop-button {
@@ -68,20 +115,35 @@
 .advantages-wr {
     position: absolute;
     bottom: 0;
-    width: 80%;
-    padding-left: 300px;
+    left: 0;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    max-width: 70vw;
+    padding-left: 17vw;
     background-color: var(--c-white);
     border-top-right-radius: 20px;
+
+    @media (max-width: 768px) {
+        display: none;
+    }
+
+    @media (max-width: 920px) {
+        height: 80px;
+        padding-left: 7vw;
+    }
 }
 .advantages-list {
     display: flex;
-    width: 900px;
+    align-items: top;
     padding: 0;
     list-style: none;
 }
 .advantages__item {
     display: flex;
-    width: calc((100% / 3) - 10px);
+    width: 100%;
+    align-items: top;
+    max-width: calc((100% / 3) - 10px);
     p {
         margin: 0;
     }
@@ -106,12 +168,21 @@
 }
 
 .advantages__title {
+    color: var(--c-black);
     font-size: 14px;
     font-weight: 600;
+
+    @media (max-width: 920px) {
+        font-weight: 400;
+    }
 }
 
 .advantages__text {
     font-size: 12px;
     font-weight: 400;
     color: var(--c-darkgray130);
+
+    @media (max-width: 920px) {
+        display: none;
+    }
 }
