--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,9 +1,19 @@
 .page-header {
-    display: flex;
-    justify-content: space-between;
+    position: relative;
+    height: 100vh;
     width: 100%;
-    padding: 1.8rem 4rem;
+    padding: 2vw 5vw;
     color: var(--c-white);
+
+    @media (max-width: 920px) {
+        padding: 1rem 0.8rem;
+    }
+
+    @media (max-width: 768px) {
+        height: auto;
+        padding: 0;
+        color: var(--c-black);
+    }
 
     ul {
         margin: 0;
@@ -14,6 +24,12 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+
+    @media (max-width: 768px) {
+        width: auto;
+        margin: 0 8vw;
+        background-color: var(--c-white);
+    }
 }
 
 .page-header__logo {
@@ -30,10 +46,18 @@
     list-style: none;
     padding: 0;
     width: calc(100% / 3);
+
+    @media (max-width: 768px) {
+        width: auto;
+    }
 }
 
 .site-list {
     justify-content: center;
+
+    @media (max-width: 768px) {
+        display: none;
+    }
 }
 
 .site-list__item {
@@ -46,6 +70,14 @@
 
     &:not(:last-of-type) {
         margin-right: 4rem;
+
+        @media (max-width: 920px) {
+            margin-right: 1.5rem;
+        }
+
+        @media (max-width: 768px) {
+            margin-right: 1rem;
+        }
     }
 }
 
@@ -64,7 +96,7 @@
 }
 
 .search-input {
-    width: 200px;
+    width: 12vw;
     border: 1px solid transparent;
     background-color: transparent;
     -webkit-transition: width 0.4s ease-in-out;
@@ -88,4 +120,8 @@
 
 .page-header svg {
     fill: var(--c-white);
+
+    @media (max-width: 768px) {
+        fill: var(--c-black);
+    }
 }
