--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -1,3 +1,4 @@
 @import "./colors.scss";
 @import "components/header.scss";
 @import "components/banner.scss";
+@import "components/suggestions.scss";
