added section "selected for you" with slider

--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -2,3 +2,4 @@
 @import "components/header.scss";
 @import "components/banner.scss";
 @import "components/suggestions.scss";
+@import "components/product.scss";
