--- a/src/assets/styles/components/suggestions.scss
+++ b/src/assets/styles/components/suggestions.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 3vw;
   grid-template-rows: 50vh;
-  padding: 40px 4rem;
+  padding: 40px 0;
 
   @media (max-width: 1200px) {
     grid-template-columns: 1fr 1fr 1fr;
