--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -3,3 +3,4 @@
 @import "components/banner.scss";
 @import "components/suggestions.scss";
 @import "components/product.scss";
+@import "components/advantages.scss";
