--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,3 +40,11 @@ a {
   width: 100%;
   margin: auto;
 }
+
+.section-name {
+  margin: 0;
+  padding-bottom: 60px;
+  font-size: 28px;
+  font-weight: 300;
+  text-align: center;
+}
