--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="personal-selection">
-    <h2>Selected just for you</h2>
+    <h2 class="section-name">Selected just for you</h2>
     <div class="slider-container">
       <div class="slider-arrow slider-arrow--left">
         <svg>
