added popular items section

--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -4,3 +4,4 @@
 @import "components/suggestions.scss";
 @import "components/product.scss";
 @import "components/advantages.scss";
+@import "components/hot-products.scss";
