--- a/src/assets/styles/components/advantages.scss
+++ b/src/assets/styles/components/advantages.scss
@@ -35,8 +35,7 @@
 }
 
 .advantages-list {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0 10px 70px 10px;
 
   &--banner {
     padding: 0;
