--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -5,3 +5,4 @@
 @import "components/product.scss";
 @import "components/advantages.scss";
 @import "components/hot-products.scss";
+@import "components/footer.scss";
