--- a/src/assets/styles/components/product.scss
+++ b/src/assets/styles/components/product.scss
@@ -2,10 +2,21 @@
   padding-bottom: 70px;
 }
 .slider-container {
-  margin-left: -25px;
-  margin-right: -25px;
-
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   position: relative;
+
+  @media (--xl-sm) {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  @media (--sm) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .slider-arrow {
@@ -14,15 +25,15 @@
   position: absolute;
   z-index: 999999;
   left: 0px;
-  display: block;
+  display: none;
 
   &--left {
-    left: -25px;
+    left: 0px;
   }
 
   &--right {
     margin-left: auto;
-    right: -25px;
+    right: 0px;
   }
 
   svg {
@@ -39,12 +50,15 @@
       fill: var(--c-darkgray150);
     }
   }
+
+  @media (--xl) {
+    display: block;
+  }
 }
 
 .slider {
-  padding-left: 10px;
-  padding-right: 10px;
   a {
+    display: block;
     outline: none;
     text-decoration: none;
   }
@@ -70,8 +84,6 @@
 .product_pic {
   object-fit: cover;
   width: 100%;
-  //padding-left: 15px;
-  //padding-right: 15px;
   height: 100%;
   max-height: 340px;
   &:focus {
@@ -101,27 +113,3 @@
 .product_price-old {
   color: var(--c-mediumgray90);
 }
-
-// .slider button {
-//   // background-image: url(/../assets/pics/icons/slider_arrow-left.svg) !important;
-// }
-
-// .slick-prev:before {
-//   // content: url(/../assets/pics/icons/slider_arrow-left.svg) !important;
-//   // background-image: url(/../assets/pics/icons/slider_arrow-left.svg) !important;
-//   background-position: center !important;
-//   background-repeat: no-repeat !important;
-//   color: black !important;
-// }
-// .slick-next:before {
-//   content: "" !important;
-//   //background-image: url(./assets/pics/icons/slider_arrow-right.svg);
-// }
-// .slick-prev,
-// .slick-next {
-// }
-
-// .slick-prev:before,
-// .slick-next:before {
-//   color: black !important;
-// }
