--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,9 +45,25 @@ a {
 }
 
 .container {
-  max-width: 1285px;
+  max-width: 1448px;
   width: 100%;
-  margin: auto;
+}
+
+.aligned {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (--xl-sm) {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  @media (--sm) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .section-name {
