--- a/src/partials/suggestions.html
+++ b/src/partials/suggestions.html
@@ -1,24 +1,24 @@
-<section class="suggestions">
-    <div class="suggestions__card suggestions__item-1">
-        <div class="suggestions__content">
-            <p class="suggestions__title">New arrivals
-                are now in!</p>
-            <div><button class="suggestion__button">Show collection</button></div>
-        </div>
+<section class="suggestions aligned">
+  <div class="suggestions__card suggestions__item-1">
+    <div class="suggestions__content">
+      <p class="suggestions__title">New arrivals
+        are now in!</p>
+      <div><button class="suggestion__button">Show collection</button></div>
+    </div>
 
+  </div>
+  <div class="suggestions__card suggestions__item-2">
+    <div class="suggestions__content">
+      <p class="suggestions__title">Basic t-shirts
+        $29,99</p>
+      <div><button class="suggestion__button">More details</button></div>
     </div>
-    <div class="suggestions__card suggestions__item-2">
-        <div class="suggestions__content">
-            <p class="suggestions__title">Basic t-shirts
-                $29,99</p>
-            <div><button class="suggestion__button">More details</button></div>
-        </div>
+  </div>
+  <div class="suggestions__card suggestions__item-3">
+    <div class="suggestions__content">
+      <p class="suggestions__title">Sale this
+        summer</p>
+      <div><button class="suggestion__button">View All</button></div>
     </div>
-    <div class="suggestions__card suggestions__item-3">
-        <div class="suggestions__content">
-            <p class="suggestions__title">Sale this
-                summer</p>
-            <div><button class="suggestion__button">View All</button></div>
-        </div>
-    </div>
+  </div>
 </section>
