--- a/src/assets/styles/components/footer.scss
+++ b/src/assets/styles/components/footer.scss
@@ -6,6 +6,14 @@
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)),
     url("../pics/subscribe-bg.png") no-repeat;
   background-size: cover;
+
+  @media (max-width: 1200px) {
+    display: block;
+  }
+
+  @media (max-width: 920px) {
+    padding-left: 10vw;
+  }
 }
 
 .subscribe_text {
