--- a/src/assets/styles/components/suggestions.scss
+++ b/src/assets/styles/components/suggestions.scss
@@ -1,14 +1,19 @@
 .suggestions {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 3vw;
-  grid-template-rows: 50vh;
+  grid-template-rows: 350px;
   padding: 40px 0 70px 0;
 
-  @media (max-width: 1200px) {
+  @media (--xl-sm) {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 40vh;
-    grid-column-gap: 3vw;
+    grid-template-rows: 300px;
+    //grid-column-gap: 3vw;
+  }
+
+  @media (--sm) {
+    display: block;
+    height: 400px;
+    padding-top: 70px;
   }
 }
 
@@ -19,10 +24,14 @@
     url(/../assets/pics/black-hoodie.png) no-repeat;
   background-size: cover;
 
-  @media (max-width: 1200px) {
+  @media (--xl-sm) {
     grid-column-start: 1;
     grid-column-end: 2;
     background-position-x: 50%;
+  }
+
+  @media (--sm) {
+    height: 100%;
   }
 }
 
@@ -33,9 +42,13 @@
     url(/../assets/pics/basic_t-shirt.png) no-repeat;
   background-size: cover;
 
-  @media (max-width: 1200px) {
+  @media (--xl-sm) {
     grid-column-start: 2;
     grid-column-end: 3;
+  }
+
+  @media (--sm) {
+    display: none;
   }
 }
 
@@ -46,20 +59,26 @@
     url(/../assets/pics/person-sale-sign.png) no-repeat;
   background-size: cover;
 
-  @media (max-width: 1200px) {
+  @media (--xl-sm) {
     grid-column-start: 3;
     grid-column-end: 4;
+  }
+
+  @media (--sm) {
+    display: none;
   }
 }
 
 .suggestions__card {
   position: relative;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .suggestions__content {
   position: absolute;
   bottom: 36px;
-  left: 3vw;
+  left: calc(10px + 3vw);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -79,8 +98,8 @@
   font-size: 25px;
   font-weight: 400;
 
-  @media (max-width: 1200px) {
-    font-size: 18px;
+  @media (--sm) {
+    font-size: 30px;
   }
 }
 
