added new custom media for extra small devices

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,6 @@
 @import "imports.scss";
 
+@custom-media --xs (width <= 560px);
 @custom-media --sm (width <= 768px);
 @custom-media --m (min-width: 769px);
 @custom-media --xl (min-width: 1025px);
