--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -63,7 +63,7 @@
               <use href="../assets/pics/icons/auto.svg">
             </svg>
           </div>
-          <div class="advantages__message">
+          <div class="advantages__message--banner">
             <p class="advantages__title--banner">Free Shipping</p>
             <p class="advantages__text">On purchases over $199</p>
           </div>
@@ -74,7 +74,7 @@
               <use href="../assets/pics/icons/smile.svg">
             </svg>
           </div>
-          <div class="advantages__message">
+          <div class="advantages__message--banner">
             <p class="advantages__title--banner">99% satisfied customers</p>
             <p class="advantages__text">Our clients' opinions
               speak for themselves</p>
@@ -86,7 +86,7 @@
               <use href="../assets/pics/icons/shield.svg">
             </svg>
           </div>
-          <div class="advantages__message">
+          <div class="advantages__message--banner">
             <p class="advantages__title--banner">Originality Guaranteed</p>
             <p class="advantages__text">30 days warranty for each
               product from our store</p>
