--- a/src/partials/hot-products.html
+++ b/src/partials/hot-products.html
@@ -1,44 +1,34 @@
 <h2 class="section-name">Products in today</h2>
 <div class="hot-products">
   <div class="hot-products_list">
-    <div class="hot-products_item product_card"><a href=""><img class="product_pic"
-          src="../assets/pics/main-page_slider/BasicSlimTShirt.png" alt="">
-        <div class="product_description">
-          <p class="product_name">Basic Slim Fit T-Shirt</p>
-          <p class="product_price">$79.99</p>
-        </div>
-      </a>
-    </div>
-    <div class="hot-products_item product_card"><a href=""><img class="product_pic"
-          src="../assets/pics/main-page_slider/LooseTexturedT-Shirt.png" alt="">
-        <div class="product_description">
-          <p class="product_name">Loose Textured T-Shirt</p>
-          <p class="product_price">$119.99</p>
-        </div>
-      </a>
-    </div>
-    <div class="hot-products_item hot-products_item--onsale product_card "><a class="product_link" href="#"><img
-          class="product_pic product_link" src="../assets/pics/main-page_slider//T-ShirtSummerVibes.png" alt="">
-
-        <div class="product_description">
-          <p class="product_name">T-Shirt Summer Vibes</p>
-          <span class="product_price-new">$79.99</span>
-          <span class="product_price-old">$119.99</span>
-        </div>
-      </a>
-    </div>
-    <div class="hot-products_item product_card"><a class="product_link" href="#"><img class="product_pic"
-          src="../assets/pics/main-page_slider/LooseKnit_.png" alt="">
-        <div class="product_description">
-          <p class="product_name">Loose Knit 3/4 Sleeve</p>
-          <p class="product_price">$119.99</p>
-        </div>
-      </a>
-    </div>
-
-
+    <a class="hot-products_item product_card" href="">
+      <img class="product_pic" src="../assets/pics/main-page_slider/BasicSlimTShirt.png" alt="">
+      <div class="product_description">
+        <p class="product_name">Basic Slim Fit T-Shirt</p>
+        <p class="product_price">$79.99</p>
+      </div>
+    </a>
+    <a class="hot-products_item product_card" href="#" class>
+      <img class="product_pic" src="../assets/pics/main-page_slider/LooseTexturedT-Shirt.png" alt="">
+      <div class="product_description">
+        <p class="product_name">Loose Textured T-Shirt</p>
+        <p class="product_price">$119.99</p>
+      </div>
+    </a>
+    <a class="hot-products_item hot-products_item--onsale product_card" href="#">
+      <img class="product_pic" src="../assets/pics/main-page_slider//T-ShirtSummerVibes.png" alt="">
+      <div class="product_description">
+        <p class="product_name">T-Shirt Summer Vibes</p>
+        <span class="product_price-new">$79.99</span>
+        <span class="product_price-old">$119.99</span>
+      </div>
+    </a>
+    <a class="hot-products_item product_card" href="#"><img class="product_pic"
+        src="../assets/pics/main-page_slider/LooseKnit_.png" alt="">
+      <div class="product_description">
+        <p class="product_name">Loose Knit 3/4 Sleeve</p>
+        <p class="product_price">$119.99</p>
+      </div>
+    </a>
   </div>
-</div>
-
-
 </div>
