--- a/src/assets/styles/components/suggestions.scss
+++ b/src/assets/styles/components/suggestions.scss
@@ -15,6 +15,10 @@
     height: 400px;
     padding-top: 70px;
   }
+
+  @media (--l-sm) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .suggestions__item-1 {
@@ -24,7 +28,7 @@
     url(/../assets/pics/black-hoodie.png) no-repeat;
   background-size: cover;
 
-  @media (--xl-sm) {
+  @media (--l-sm) {
     grid-column-start: 1;
     grid-column-end: 2;
     background-position-x: 50%;
@@ -42,7 +46,7 @@
     url(/../assets/pics/basic_t-shirt.png) no-repeat;
   background-size: cover;
 
-  @media (--xl-sm) {
+  @media (--l-sm) {
     grid-column-start: 2;
     grid-column-end: 3;
   }
@@ -65,6 +69,10 @@
   }
 
   @media (--sm) {
+    display: none;
+  }
+
+  @media (--l-sm) {
     display: none;
   }
 }
