--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,13 +8,13 @@
 </section>
 <section class="footer_nav-wr">
   <div class="footer_about">
-    <div class="logo">
+    <div class="logo footer_logo">
       <svg class="logo__pic">
         <use href="../assets/pics/icons/logo.svg">
       </svg>
       <h1 class="logo__title">E-shop</h1>
     </div>
-    <p>House My Brand designs clothing for the young, the old &
+    <p class="footer_text">House My Brand designs clothing for the young, the old &
       everyone in between – but most importantly, for the fashionable</p>
     <ul class="socials_list">
       <li class="socials_item socials_item--facebook"><a href="">
@@ -45,19 +45,19 @@
     </ul>
   </div>
   <div class="footer_nav">
-    <div class="footer_nav--item footer_nav--item_title">Shopping online</div>
+    <div class="footer_nav--item_title">Shopping online</div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Order Status</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Shipping and Delivery</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Returns</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Payment Options</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Contact Us</a></div>
-    <div class="footer_nav--item footer_nav--item_title">Information</div>
+    <div class="footer_nav--item_title">Information</div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Gift Cards</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Find a store</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Newsletter</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Become a member</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">Site feedback</a></div>
-    <div class="footer_nav--item footer_nav--item_title">Contact</div>
+    <div class="footer_nav--item_title">Contact</div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">store@ui.com</a></div>
     <div class="footer_nav--item"><a href="#" class="footer_nav--item_link">+1 123 111 111</a></div>
   </div>
