--- a/src/assets/styles/components/product.scss
+++ b/src/assets/styles/components/product.scss
@@ -83,6 +83,7 @@
 
 .product_pic {
   object-fit: cover;
+  object-position: top;
   width: 100%;
   height: 100%;
   max-height: 340px;
@@ -92,6 +93,14 @@
 
   &:hover {
     filter: drop-shadow(0 0 10px rgba(0, 4, 255, 0.059));
+  }
+
+  @media (--l-sm) {
+    max-height: 45vh;
+  }
+
+  @media (--sm) {
+    max-height: 40vh;
   }
 }
 
