--- a/src/assets/styles/components/banner.scss
+++ b/src/assets/styles/components/banner.scss
@@ -32,20 +32,31 @@
   }
 }
 .sales-banner {
+  position: absolute;
+  top: 150px;
   display: flex;
   max-width: 365px;
   width: 100%;
   flex-direction: column;
   justify-content: space-between;
 
+  @media (--l-sm) {
+  }
+
   @media (--sm) {
+    top: 300px;
     margin-left: calc(35px + 3vw);
-    padding-top: 40vw;
+    //padding-top: 40vw;
   }
 
   @media (--xs) {
+    top: 212px;
     max-width: 260px;
-    padding-top: 40vw;
+  }
+
+  @media (--l) {
+    //margin-top: 150px;
+    margin-left: calc(45px + 3vw);
   }
 }
 
@@ -58,7 +69,7 @@
 
   @media (--m) {
     font-size: 60px;
-    line-height: 58px;
+    line-height: 68px;
   }
 
   @media (--sm) {
@@ -67,7 +78,7 @@
   }
 
   @media (--xs) {
-    font-size: 36px;
+    font-size: 34px;
     line-height: 48px;
   }
 }
