added login page

--- a/src/assets/styles/imports.scss
+++ b/src/assets/styles/imports.scss
@@ -6,3 +6,4 @@
 @import "components/advantages.scss";
 @import "components/hot-products.scss";
 @import "components/footer.scss";
+@import "components/login.scss";
