--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -71,6 +71,16 @@ a {
   }
 }
 
+.aligned-narrow {
+  min-height: 100vh;
+  max-width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin: auto;
+}
+
 .section-name {
   margin: 0;
   padding-bottom: 60px;
@@ -80,6 +90,31 @@ a {
 }
 
 .button {
+  height: 50px;
   border-radius: 30px;
   border: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+.button--wide {
+  width: 100%;
+}
+
+.input {
+  width: 100%;
+  height: 50px;
+  padding-left: 30px;
+  border-radius: 30px;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0px 0px 2px var(--c-orange);
+  }
+}
+
+.input--wide {
+  width: 100%;
 }
