--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,12 +1,11 @@
-.page-index .page-header {
+.page-header {
   position: relative;
-  height: 100vh;
   width: 100%;
   padding: 20px 40px;
   color: var(--c-black);
 
   @media (--l) {
-    padding: 40px 30px 0 30px;
+    padding: 30px 30px 0 30px;
   }
 
   @media (--sm) {
@@ -22,6 +21,7 @@
 
 .page-index .page-header {
   color: var(--c-white);
+  height: 100vh;
 }
 
 .main-nav {
@@ -138,6 +138,10 @@
 }
 
 .page-header svg {
+  fill: var(--c-black);
+}
+
+.page-index.page-header svg {
   fill: var(--c-white);
 
   @media (--sm) {
