removed posthtml plagin, converted htmls into pugб changed some paths

--- a/src/assets/styles/components/footer.scss
+++ b/src/assets/styles/components/footer.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 80px 60px;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)),
-    url("../pics/subscribe-bg.png") no-repeat;
+    url("../../pics/subscribe-bg.png") no-repeat;
   background-size: cover;
 
   @media (--xs) {
