--- a/src/assets/styles/components/suggestions.scss
+++ b/src/assets/styles/components/suggestions.scss
@@ -25,7 +25,7 @@
   grid-column-start: 1;
   grid-column-end: 3;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)),
-    url(/../assets/pics/black-hoodie.png) no-repeat;
+    url(../../pics/black-hoodie.png) no-repeat;
   background-size: cover;
 
   @media (--l-sm) {
@@ -43,7 +43,7 @@
   grid-column-start: 3;
   grid-column-end: 4;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)),
-    url(/../assets/pics/basic_t-shirt.png) no-repeat;
+    url(../../pics/basic_t-shirt.png) no-repeat;
   background-size: cover;
 
   @media (--l-sm) {
@@ -60,7 +60,7 @@
   grid-column-start: 4;
   grid-column-end: 5;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)),
-    url(/../assets/pics/person-sale-sign.png) no-repeat;
+    url(../../pics/person-sale-sign.png) no-repeat;
   background-size: cover;
 
   @media (--xl-sm) {
