--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,7 +4,7 @@
     <li class="advantages__item">
       <div class="advantages__icon">
         <svg>
-          <use href="../assets/pics/icons/auto.svg">
+          <use href="../pics/icons/auto.svg">
         </svg>
       </div>
       <div class="advantages__message">
@@ -16,7 +16,7 @@
     <li class="advantages__item">
       <div class="advantages__icon">
         <svg>
-          <use href="../assets/pics/icons/payments.svg">
+          <use href="../pics/icons/payments.svg">
         </svg>
       </div>
       <div class="advantages__message">
@@ -28,7 +28,7 @@
     <li class="advantages__item">
       <div class="advantages__icon">
         <svg>
-          <use href="../assets/pics/icons/shield.svg">
+          <use href="../pics/icons/shield.svg">
         </svg>
       </div>
       <div class="advantages__message">
@@ -41,7 +41,7 @@
     <li class="advantages__item">
       <div class="advantages__icon">
         <svg>
-          <use href="../assets/pics/icons/quality.svg">
+          <use href="../pics/icons/quality.svg">
         </svg>
       </div>
       <div class="advantages__message">
