--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -7,7 +7,7 @@
       <a href="#" class="shop-button">
         <div class="shop-button__arrow">
           <svg>
-            <use href="../assets/pics/icons/arrow-left.svg">
+            <use href="../pics/icons/arrow-left.svg">
           </svg>
         </div>
         <span>Shop now</span>
@@ -19,7 +19,7 @@
       <li class="advantages__item--banner">
         <div class="advantages__icon--banner">
           <svg>
-            <use href="../assets/pics/icons/auto.svg">
+            <use href="../pics/icons/auto.svg">
           </svg>
         </div>
         <div class="advantages__message--banner">
@@ -30,7 +30,7 @@
       <li class="advantages__item--banner">
         <div class="advantages__icon--banner">
           <svg>
-            <use href="../assets/pics/icons/smile.svg">
+            <use href="../pics/icons/smile.svg">
           </svg>
         </div>
         <div class="advantages__message--banner">
@@ -42,7 +42,7 @@
       <li class="advantages__item--banner">
         <div class="advantages__icon--banner">
           <svg>
-            <use href="../assets/pics/icons/shield.svg">
+            <use href="../pics/icons/shield.svg">
           </svg>
         </div>
         <div class="advantages__message--banner">
