--- a/src/assets/styles/components/banner.scss
+++ b/src/assets/styles/components/banner.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(../pics/bggirl.jpg) no-repeat;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(../../pics/bggirl.jpg) no-repeat;
   background-size: cover;
   @media (--sm) {
     display: none;
@@ -27,7 +27,7 @@
     max-width: 100%;
     margin: 0;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
-      url(../pics/mainbg-mobile.png) no-repeat;
+      url(../../pics/mainbg-mobile.png) no-repeat;
     background-size: cover;
   }
 }
