--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 20px 40px;
   color: var(--c-black);
+  fill: brown;
 
   @media (--l) {
     padding: 30px 30px 0 30px;
@@ -137,11 +138,13 @@
   transition: 0.4s;
 }
 
-.page-header svg {
-  fill: var(--c-black);
+.page-header {
+  svg {
+    fill: var(--c-black);
+  }
 }
 
-.page-index.page-header svg {
+.page-index .page-header svg {
   fill: var(--c-white);
 
   @media (--sm) {
