--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
   <div class="footer_about">
     <div class="logo footer_logo">
       <svg class="logo__pic">
-        <use href="../assets/pics/icons/logo.svg">
+        <use href="../pics/icons/logo.svg">
       </svg>
       <h1 class="logo__title">E-shop</h1>
     </div>
@@ -19,27 +19,27 @@
     <ul class="socials_list">
       <li class="socials_item socials_item--facebook"><a href="">
           <svg>
-            <use href="../assets/pics/icons/facebook.svg">
+            <use href="../pics/icons/facebook.svg">
           </svg>
         </a></li>
       <li class="socials_item socials_item--twitter"><a href="">
           <svg>
-            <use href="../assets/pics/icons/twitter.svg">
+            <use href="../pics/icons/twitter.svg">
           </svg>
         </a></li>
       <li class="socials_item socials_item--linkedin"><a href="">
           <svg>
-            <use href="../assets/pics/icons/linkedin.svg">
+            <use href="../pics/icons/linkedin.svg">
           </svg>
         </a></li>
       <li class="socials_item socials_item--instagram"><a href="">
           <svg>
-            <use href="../assets/pics/icons/instagram.svg">
+            <use href="../pics/icons/instagram.svg">
           </svg>
         </a></li>
       <li class="socials_item socials_item--youtube"><a href="">
           <svg>
-            <use href="../assets/pics/icons/youtube.svg">
+            <use href="../pics/icons/youtube.svg">
           </svg>
         </a></li>
     </ul>
