converted html into pug

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,14 +9,14 @@ body
   .page-index
     .underlay
     include ../partials/header.pug
-    include ../partials/banner.html
+    include ../partials/banner.pug
     .container
-      include ../partials/suggestions.html
-    include ../partials/product.html
+      include ../partials/suggestions.pug
+    include ../partials/product.pug
     .container.aligned
-      include ../partials/advantages.html
+      include ../partials/advantages.pug
     .container.aligned
-      include ../partials/hot-products.html
+      include ../partials/hot-products.pug
     .container.aligned
-      include ../partials/footer.html
+      include ../partials/footer.pug
 script(src='../scripts/index.js')
